--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Lettuce Be Cereal
 #<br><span class="smaller">{{ post.date | date: "%B %-d, %Y" }}</span>  <br/>
 ---
 
-  <h1 class="content-listing-header sans">Articles</h1>
+  <!---<h1 class="content-listing-header sans">Articles</h1> -->
   <ul class="content-listing ">
     {% for post in site.posts %}      
         <li class="listing">
@@ -16,3 +16,7 @@ title: Lettuce Be Cereal
         </li>
     {% endfor %}
   </ul>
+  
+  <br>
+  {% include substack.html %}
+
